# psychicbuddy

./: .firebaserc  .gitignore  README.md  about.html  aboutus.css  aboutus.html  contact_window.html  index.html  scri.js  script.js  style.css  style.css.map  style.scss
Backend/: pyproject.toml
Backend/PsychicBuddy/: __init__.py  __main__.py
Backend/PsychicBuddy/utils/: files.py  summarization.py  yolo.py  yolo_predict.py  yolo_tf1.py
Backend/psychicbuddy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
