[tool.poetry]
name = "PsychicBuddy"
version = "0.1.0"
description = ""
authors = ["DragonPyli <codewizard001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.4"
nltk = "^3.5"
keras = "^2.4.3"
transformers = "^4.1.1"
pandas = "^1.2.0"
tensorflow = "^2.4.0"
flask = "^1.1.2"
sentencepiece = "^0.1.95"
SpeechRecognition = "^3.8.1"
pydub = "^0.24.1"
pillow = "^8.1.0"
moviepy = "^1.0.3"
opencv-python = "^4.5.1"
ipython = "^7.20.0"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
